welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
	if (talking,hour==true,<7){return true}
	if (talking== true,hour>20){return true}
	else{return false}
}
